# screensaver-bursts

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  build_helpers.rs
.github/workflows/: ci.yml
assets/: local76-bursts.desktop  local76-bursts.xml  scene-bursts.desktop  scene-bursts.xml
scripts/: build.sh  release.sh
src/: bursts.rs  main.rs  screensaver_shim.rs  tests_perf.rs
src/bursts/: bursts_tests.rs  draw.rs  drawing.rs  mod.rs  physics.rs  physics_tests.rs  types.rs  update.rs
